tests/sksl/errors/ReservedNameTemplate.glsl
### Compilation failed:

error: 1: name 'template' is reserved
int template;
    ^^^^^^^^
1 error
